Change colors, add skill-list-wrapper, fix empty list message, smooth scrolling, change border-radius, refactor spacings, add class to skill item

--- a/src/common.blocks/skill/skill.scss
+++ b/src/common.blocks/skill/skill.scss
@@ -38,8 +38,6 @@
   }
 
   &_form {
-    background-color: var(--accent-background);
-
     &__title {
       font-size: 1.5em;
       margin-bottom: 10px;
@@ -54,7 +52,7 @@
 
       &_name {
         display: inline-block;
-        width: 190px;
+        width: 180px;
         font-weight: normal;
       }
     }
