--- a/src/common.blocks/skills-list-container.scss
+++ b/src/common.blocks/skills-list-container.scss
@@ -1,20 +1,17 @@
 .skills-list-container {
   width: 400px;
-  margin: 10px auto 0;
+  margin: 0 auto;
   background-color: var(--background);
   color: var(--foreground);
   font-size: 14px;
-  padding: 10px 10px 15px;
-  border-radius: 6px;
+  border-radius: 10px;
   border: solid var(--background) 1px;
 
   display: flex;
-  gap: 10px;
   flex-direction: column;
 
   &__form {
-    margin: 5px -10px -15px;
-    padding: 15px;
+    padding: 10px;
     border-radius: inherit;
   }
 }
