--- a/src/common.blocks/skills-list/skills-list.scss
+++ b/src/common.blocks/skills-list/skills-list.scss
@@ -2,14 +2,25 @@
   display: flex;
   gap: 10px;
   flex-direction: column;
-  max-height: 386px;
+  height: 387px;
   overflow-y: scroll;
-  margin-right: -10px;
+  scroll-snap-type: y proximity;
+  scroll-padding-top: 1px;
   padding-right: 10px;
+
+  &-wrapper {
+    padding: 15px 0 15px 10px;
+    background-color: var(--accent-background);
+    border-radius: 10px;
+  }
+
+  &__element {
+    scroll-snap-align: start;
+  }
 
   &:empty {
     &::after {
-      margin: 10px auto;
+      margin: auto auto;
       content: 'No skills yet. Feel free to add them ↓';
     }
   }
